--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
-    "redux-persist": "^6.0.0"
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
